--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----
 # Site
 
-title: dohee's portfolio Template
+title: dohee's portfolio
 url: "https://orchid-heron.cloudvent.net"
 baseurl:
 google_analytics_key:
